[project]
name = "asm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7.7"
dependencies = [
    "absl-py==0.9.0",
    "aiohttp==3.8.4",
    "aioredis==2.0.1",
    "aiosignal==1.3.1",
    "anyio==3.6.2",
    "argon2-cffi==21.3.0",
    "argon2-cffi-bindings==21.2.0",
    "async-timeout==4.0.2",
    "asynctest==0.13.0",
    "attrs==22.2.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.11.1",
    "bleach==5.0.1",
    "blessed==1.20.0",
    "cachetools==5.3.0",
    "cffi==1.15.1",
    "charset-normalizer==3.0.1",
    "click==8.1.3",
    "colorama==0.4.6",
    "colorful==0.5.5",
    "debugpy==1.6.5",
    "defusedxml==0.7.1",
    "docker==6.1.3",
    "entrypoints==0.4",
    "fastjsonschema==2.16.2",
    "filelock==3.9.0",
    "frozenlist==1.3.3",
    "glog==0.3.1",
    "google==3.0.0",
    "google-api-core==2.11.0",
    "google-auth==2.16.0",
    "googleapis-common-protos==1.58.0",
    "gpustat==1.0.0",
    "grpcio==1.51.1",
    "idna==3.4",
    "importlib-metadata==6.0.0",
    "importlib-resources==5.10.2",
    "ipykernel==6.16.2",
    "ipython==7.34.0",
    "ipython-genutils==0.2.0",
    "ipywidgets==8.0.4",
    "jedi==0.18.2",
    "jenkspy==0.2.0",
    "jinja2==3.1.2",
    "joblib==0.13.2",
    "jsonschema==4.17.3",
    "jupyter==1.0.0",
    "jupyter-client==7.4.9",
    "jupyter-console==6.4.4",
    "jupyter-core==4.12.0",
    "jupyter-server==1.23.5",
    "jupyterlab-pygments==0.2.2",
    "jupyterlab-widgets==3.0.5",
    "line-profiler==4.0.3",
    "mako==1.1.3",
    "markupsafe==2.1.1",
    "matplotlib-inline==0.1.6",
    "mistune==2.0.4",
    "msgpack==1.0.4",
    "multidict==6.0.4",
    "nbclassic==0.4.8",
    "nbclient==0.7.2",
    "nbconvert==7.2.7",
    "nbformat==5.7.3",
    "nest-asyncio==1.5.6",
    "networkx==2.3",
    "notebook==6.5.2",
    "notebook-shim==0.2.2",
    "numpy==1.21.0",
    "nvidia-ml-py==11.495.46",
    "opencensus==0.11.1",
    "opencensus-context==0.1.3",
    "pandas==1.3.5",
    "pandocfilters==1.5.0",
    "parso==0.8.3",
    "pexpect==4.8.0",
    "pgmpy==0.1.13",
    "pickle5==0.0.12",
    "pickleshare==0.7.5",
    "pkgutil-resolve-name==1.3.10",
    "prometheus-client==0.15.0",
    "prompt-toolkit==3.0.36",
    "protobuf==3.20.3",
    "psutil==5.9.4",
    "ptyprocess==0.7.0",
    "py-spy==0.3.14",
    "py4j==0.10.9.7",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pycparser==2.21",
    "pygments==2.14.0",
    "pyrsistent==0.19.3",
    "pyspark>=3.4.4",
    "python-gflags==3.1.2",
    "pyzmq==25.0.0",
    "qtconsole==5.4.0",
    "qtpy==2.3.0",
    "ray==0.8.7",
    "redis==3.4.1",
    "requests==2.28.2",
    "rsa==4.9",
    "scikit-learn>=1.0.2",
    "scipy>=1.7.3",
    "send2trash==1.8.0",
    "sniffio==1.3.0",
    "soupsieve==2.3.2.post1",
    "sqlparse==0.3.0",
    "statsmodels==0.12.2",
    "tabulate==0.9.0",
    "tensorboardx==2.6",
    "terminado==0.17.1",
    "tinycss2==1.2.1",
    "torch==1.7.1",
    "tqdm==4.31.1",
    "traitlets==5.8.1",
    "urllib3==1.26.14",
    "wcwidth==0.2.6",
    "webencodings==0.5.1",
    "websocket-client==1.4.2",
    "widgetsnbextension==4.0.5",
    "yarl==1.8.2",
    "zipp==3.11.0",
]
