[project]
name = "asm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.3.1",
    "aiohttp>=3.12.15",
    "aioredis>=2.0.1",
    "aiosignal>=1.4.0",
    "anyio>=4.10.0",
    "argon2-cffi>=25.1.0",
    "argon2-cffi-bindings>=25.1.0",
    "async-timeout>=5.0.1",
    "asynctest>=0.13.0",
    "attrs>=25.3.0",
    "backcall>=0.2.0",
    "beautifulsoup4>=4.13.5",
    "bleach>=6.2.0",
    "blessed>=1.21.0",
    "cachetools>=5.5.2",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.3",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "colorful>=0.5.7",
    "debugpy>=1.8.16",
    "defusedxml>=0.7.1",
    "docker>=7.1.0",
    "entrypoints>=0.4",
    "fastjsonschema>=2.21.2",
    "filelock>=3.19.1",
    "frozenlist>=1.7.0",
    "glog>=0.3.1",
    "google>=3.0.0",
    "google-api-core>=2.25.1",
    "google-auth>=2.40.3",
    "googleapis-common-protos>=1.70.0",
    "grpcio>=1.74.0",
    "idna>=3.10",
    "importlib-metadata>=8.7.0",
    "importlib-resources>=6.5.2",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "ipython-genutils>=0.2.0",
    "ipywidgets>=8.1.7",
    "jedi>=0.19.2",
    "jenkspy>=0.4.1",
    "jinja2>=3.1.6",
    "joblib>=1.5.2",
    "jsonschema>=4.25.1",
    "jupyter>=1.1.1",
    "jupyter-client>=8.6.3",
    "jupyter-console>=6.6.3",
    "jupyter-core>=5.8.1",
    "jupyter-server>=2.17.0",
    "jupyterlab-pygments>=0.3.0",
    "jupyterlab-widgets>=3.0.15",
    "line-profiler>=5.0.0",
    "mako>=1.3.10",
    "markupsafe>=3.0.2",
    "matplotlib-inline>=0.1.7",
    "mistune>=3.1.4",
    "msgpack>=1.1.1",
    "multidict>=6.6.4",
    "nbclassic>=1.3.2",
    "nbclient>=0.10.2",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "nest-asyncio>=1.6.0",
    "networkx>=3.5",
    "notebook>=7.4.5",
    "notebook-shim>=0.2.4",
    "numpy>=2.3.3",
    "nvidia-ml-py>=13.580.82",
    "opencensus>=0.11.4",
    "opencensus-context>=0.1.3",
    "pandas>=2.3.2",
    "pandocfilters>=1.5.1",
    "parso>=0.8.5",
    "pexpect>=4.9.0",
    "pgmpy>=1.0.0",
    "pickleshare>=0.7.5",
    "pkgutil-resolve-name>=1.3.10",
    "prometheus-client>=0.22.1",
    "prompt-toolkit>=3.0.52",
    "protobuf>=6.32.1",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "ptyprocess>=0.7.0",
    "py-spy>=0.4.1",
    "py4j>=0.10.9.9",
    "pyarrow>=21.0.0",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pycparser>=2.23",
    "pygments>=2.19.2",
    "pyrsistent>=0.20.0",
    "pyspark>=4.0.1",
    "python-gflags>=3.1.2",
    "pyzmq>=27.1.0",
    "qtconsole>=5.7.0",
    "qtpy>=2.4.3",
    "ray>=2.49.1",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "rsa>=4.9.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "send2trash>=1.8.3",
    "sniffio>=1.3.1",
    "soupsieve>=2.8",
    "sqlparse>=0.5.3",
    "statsmodels>=0.14.5",
    "tabulate>=0.9.0",
    "tensorboardx>=2.6.4",
    "terminado>=0.18.1",
    "tinycss2>=1.4.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "urllib3>=2.5.0",
    "wcwidth>=0.2.13",
    "webencodings>=0.5.1",
    "websocket-client>=1.8.0",
    "widgetsnbextension>=4.0.14",
    "yarl>=1.20.1",
    "zipp>=3.23.0",
]
